--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section>
       <h2>Data Visualizations</h2>
       <p>Explore the interactive charts and graphs that illustrate our data analysis results.</p>
-      <!-- Embed your charts here -->
+      <iframe src="B.html" width="100%" height="600" style="border: none;" title="Interactive Data Chart"></iframe>
     </section>
     <section>
       <h2>Download</h2>
