--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section>
       <h2>Data Visualizations</h2>
       <p>Explore the interactive charts and graphs that illustrate our data analysis results.</p>
-      <iframe src="B.html" width="100%" height="600" style="border: none;" title="Interactive Data Chart"></iframe>
+      <iframe src="https://github.com/greengarden0925/COVIDWearableDevice/blob/main/Thematic%20plot%20for%20supplementary/2023-06-15thematic%20analysis%20plot.html" width="100%" height="600" style="border: none;" title="Interactive Data Chart"></iframe>
     </section>
     <section>
       <h2>Download</h2>
