--- a/index.html
+++ b/index.html
@@ -50,16 +50,8 @@
       <iframe src="Thematic%20plot%20for%20supplementary/2023-06-15thematic%20analysis%20plot.html" width="100%" height="600" style="border: none;" title="Interactive Data Chart"></iframe>
     </section>
     <section>
-      <h2>Download</h2>
-      <p>Access the full dataset and analysis scripts:</p>
-      <ul>
-        <li><a href="data/dataset.csv" download>Download Dataset (CSV)</a></li>
-        <li><a href="scripts/analysis.py" download>Download Analysis Script (Python)</a></li>
-      </ul>
-    </section>
-    <section>
       <h2>Contact</h2>
-      <p>For questions or collaborations, please contact <a href="mailto:researcher@example.com">researcher@example.com</a>.</p>
+      <p>For questions or collaborations, please contact <a href="mailto:greengarden720925@gmail.com">greengarden720925@gmail.com</a>.</p>
     </section>
   </main>
   <footer>
