--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
   <main>
     <section>
       <h2>Abstract</h2>
-      <p>This project presents the data analysis conducted for our recent research paper, providing interactive visualizations and key findings.</p>
+      <p>This page presents the data analysis conducted for our recent research paper, providing interactive visualizations and key findings.</p>
     </section>
     <section>
       <h2>Data Visualizations</h2>
       <p>Explore the interactive charts and graphs that illustrate our data analysis results.</p>
       <ul>
-        <li><a href="Thematic%20plot%20for%20supplementary" download>Download Thematic analysis interactive plot</a></li>
+        <li><a href="Thematic%20plot%20for%20supplementary/2023-06-15thematic%20analysis%20plot.html" download>Download Thematic analysis interactive plot</a></li>
       </ul>
       <iframe src="Thematic%20plot%20for%20supplementary/2023-06-15thematic%20analysis%20plot.html" width="100%" height="600" style="border: none;" title="Interactive Data Chart"></iframe>
     </section>
